# knowledge-assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  MakeFile  README.md  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  req.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e1febc1b9225_initial_schema_all_tables.py  f2d732b5b183_update_embedding_dimension.py
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  chat.py  documents.py  health.py
app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
app/models/: __init__.py  base.py  chat.py  chunk.py  document.py  memory.py  user.py
app/rag/: chunker.py  factory.py  hybrid_retriever.py  interfaces.py  pipeline.py  prompt_builder.py
app/rag/providers/embedders/: huggingface.py  openai.py
app/rag/providers/llms/: ollama.py  openai.py
app/rag/providers/rerankers/: flashrank.py
app/repositories/: base.py  chat_repo.py  chunk_repo.py  document_repo.py  memory_repo.py  user_repo.py
app/schemas/: auth.py  chat.py  common.py  document.py  user.py
app/services/: auth_service.py  chat_service.py  document_service.py
app/storage/: base.py  local.py
app/workers/: celery_app.py  embedding_tasks.py
deployment/: nginx.conf
tests/: test_placeholder.py
